Small changes to stop breaking on small height viewports

--- a/public/stylesheets/components/train-times.styl
+++ b/public/stylesheets/components/train-times.styl
@@ -11,7 +11,6 @@
   padding 24px
   padding 7vmin
   width 100%
-  height 18.18%
   font-size 24px
   font-size 7vmin
   line-height 1em
