--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -39,10 +39,10 @@ table{border-collapse:collapse;border-spacing:0}
 html,body{height:100%}
 body{margin:0;font:16px "FS Emeric Book",Verdana,sans-serif;background-color:#000;color:#fff}
 a{color:#00b7ff}
-.widget{padding:30px 0;padding:8vmin 0}
+.widget{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;width:100%;height:100%;padding:30px 0;padding:8vmin 0}
 .widget__title{margin:0 0 16px;margin:0 0 5vmin;text-align:center;font-weight:normal;font-size:9.5vmin}
 .train-schedule{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:block;height:100%;margin:0;padding:0}
-.train-schedule__item{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:block;padding:24px;padding:7vmin;width:100%;height:18.18%;font-size:24px;font-size:7vmin;line-height:1em;color:#fff;text-align:center}
+.train-schedule__item{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;display:block;padding:24px;padding:7vmin;width:100%;font-size:24px;font-size:7vmin;line-height:1em;color:#fff;text-align:center}
 .train-schedule__item--onTime{background-color:transparent}
 .train-schedule__item--delays{background-color:#6f4a01}
 .train-schedule__item--incident{background-color:#6f0102}
