--- a/public/stylesheets/layout/widget.styl
+++ b/public/stylesheets/layout/widget.styl
@@ -1,4 +1,7 @@
 .widget
+  box-sizing border-box
+  width 100%
+  height 100%
   padding 30px 0
   padding 8vmin 0
 
